--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: 它山之石 可以攻玉
 author: Abhinav Saxena
 url: https://huaaorain.github.io # root address of the site
 description: > # description of the site (multiple lines allowed)
-  本网站收集了一些工具性的网站以及软件，并按照用途大致划分了一些板块，希望可以对您有一些帮助。如果您感觉有用的话还请点击About点个赞吧，拜托啦！！！
+  本网站收集了一些工具性的网站以及软件，并按照用途大致划分了一些板块，希望可以对您有一些帮助。如果您感觉有用的话还请个赞吧，拜托啦！！！
 
 permalink: /:slug
 
