--- a/_data/home.yml
+++ b/_data/home.yml
@@ -72,7 +72,7 @@ project_entries:
     desc: 该部分提供一些工具性网站的合集。
 
   - title: 9、漫画、动漫、电视剧
-    url: 9-漫画、动漫、电视剧
+    url: 9-漫画-动漫-电视剧
     desc: 该部分提供一些可以看漫画、动漫、电视剧的网站。
 
   - title: 10、优美的语言
