--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ theme_config:
   appearance_toggle: true # if appearance can be switched by user
   back_home_text: "Home" # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
-  post_num: "-%d、"
+  post_num: "-%d、" # 这里是每个类别中post的序号
   show_description: true # show blog description
   show_navbar: true # show horizontal navbar
   show_footer: true # show footer links in home page,add in _data/home.yml
