--- a/_config.yml
+++ b/_config.yml
@@ -34,9 +34,9 @@ theme_config:
   show_tags: true # show tags in a blog posts
   # options for "home" page
   home:
-    title_projects: 妙妙网站分类
+    title_projects: 妙妙网站
     title_misc_list: Details
-    title_blog: Blogs
+    # title_blog: Blogs
     title_old_projects: Projects
 
 soopr:
