--- a/_data/home.yml
+++ b/_data/home.yml
@@ -84,11 +84,11 @@ project_entries:
   #   desc: 这是一个所有妙妙工具的合集。
 
 computer_entries: # 电脑硬件部分
-  - title: 0、电脑硬件知识（目录）
+  - title: 0、电脑硬件（目录）
     url: 0-电脑硬件介绍
     desc: 本章节介绍电脑硬件的各种知识，这部分是目录。
 
-  - title: 1、台式机主板接口
+  - title: 2、主板：电脑的躯干
     url: 1-台式机主板接口
     desc: 这部分介绍了台式机主板的相关知识。
 
