--- a/_data/home.yml
+++ b/_data/home.yml
@@ -93,7 +93,7 @@ computer_skills_entries: # 电脑小技巧部分
     desc: 这部分介绍了如何安装操作系统。
 
   - title: 2、U盘启动盘恢复
-    url: 2-U盘启动盘恢复
+    url: 2-启动盘恢复
     desc: 这部分介绍了如何将系统安装U盘恢复为普通U盘。
 
 computer_entries: # 电脑硬件部分
