--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ theme_config:
   home:
     title_magic_web_projects: 妙妙网站
     title_misc_list: Details
-    title_web_skills_projects: 妙妙网站
+    title_web_skills_projects: 网站调试
     title_computer_skills_projects: 电脑小技巧介绍
     title_computer_projects: 电脑硬件介绍
     # title_blog: Blogs
