--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ theme_config:
   # following keys are using to create home layout
   magic_web_projects: true # show projects as cards, add in _data/home.yml
   show_computer_skills_projects: true # 展示电脑硬件部分, add in _data/home.yml
-  show_web_skills_projects: true # 展示网站调试部分, add in _data/home.yml
+  # show_web_skills_projects: true # 展示网站调试部分, add in _data/home.yml
   show_computer_projects: true # 展示电脑硬件部分, add in _data/home.yml
   show_blog: true # show blog posts added in _posts
   show_old_projects: true # show old projects as cards, add in _data/home.yml
@@ -39,7 +39,7 @@ theme_config:
   home:
     title_magic_web_projects: 妙妙网站
     title_misc_list: Details
-    title_web_skills_projects: 网站调试
+    # title_web_skills_projects: 网站调试
     title_computer_skills_projects: 电脑小技巧介绍
     title_computer_projects: 电脑硬件介绍
     # title_blog: Blogs
