--- a/_data/home.yml
+++ b/_data/home.yml
@@ -8,7 +8,7 @@ navbar_entries:
   # - title: website
   #   url: https://www.abhinav.co
 
-project_entries:
+magic_web_entries:
   - title: 0、无用但有趣
     url: 0-无用但有趣
     desc: 该部分提供的妙妙工具大多没什么用，但挺好玩的。
