--- a/_data/home.yml
+++ b/_data/home.yml
@@ -15,7 +15,7 @@ magic_web_entries:
 
   - title: 1、批量修改
     url: 1-批量修改
-    desc: 该部分提供的妙妙工具用于批量修改文件名字、图片大小等。
+    desc: 该部分提供的是一些实用工具。
 
   - title: 2、图像处理相关
     url: 2-图像处理
