--- a/_data/home.yml
+++ b/_data/home.yml
@@ -13,8 +13,8 @@ magic_web_entries:
     url: 0-无用但有趣
     desc: 该部分提供的妙妙工具大多没什么用，但挺好玩的。
 
-  - title: 1、批量修改
-    url: 1-批量修改
+  - title: 1、实用工具
+    url: 1-实用工具
     desc: 该部分提供的是一些实用工具。
 
   - title: 2、图像处理相关
