--- a/_data/home.yml
+++ b/_data/home.yml
@@ -96,6 +96,14 @@ computer_skills_entries: # 电脑小技巧部分
     url: 2-启动盘恢复
     desc: 这部分介绍了如何将系统安装U盘恢复为普通U盘。
 
+  - title: 3、查看电脑运行时间
+    url: 3-查看电脑运行时间
+    desc: 这部分介绍了如何查看电脑运行时间。
+
+  - title: 4、关闭数据跨境传输
+    url: 4-关闭数据跨境传输
+    desc: 这部分介绍了重装系统时如何关闭“同意个人数据跨境传输”。
+
 computer_entries: # 电脑硬件部分
   - title: 0、电脑硬件（目录）
     url: 0-电脑硬件介绍
