--- a/_data/home.yml
+++ b/_data/home.yml
@@ -92,10 +92,10 @@ computer_skills_entries: # 电脑小技巧部分
     url: 1-安装系统
     desc: 这部分介绍了如何安装操作系统。
 
-  - title: 2、U盘启动盘恢复
-    url: 2-启动盘恢复
+  - title: 2、磁盘格式化
+    url: 2-磁盘格式化
     desc: 这部分介绍了如何将系统安装U盘恢复为普通U盘。
-
+ 
   - title: 3、查看电脑运行时间
     url: 3-查看电脑运行时间
     desc: 这部分介绍了如何查看电脑运行时间。
